vercre-issuer/src/snapshots/par:request:state.snap
---
source: vercre-issuer/src/par.rs
assertion_line: 140
expression: state
---
stage:
  pushed_authorization:
    request:
      credential_issuer: "http://vercre.io"
      response_type: code
      client_id: 96bfb9cb-0513-7d64-5532-bed74c48f9ab
      redirect_uri: "http://localhost:3000/callback"
      state: "1234"
      code_challenge: B6qi8EPWVTnONnO8XNSAsN7O2ejthn3pCKwZUO0HzU8
      code_challenge_method: S256
      authorization_details:
        - type: openid_credential
          credential_configuration_id: EmployeeID_JWT
      subject_id: normal_user
      wallet_issuer: "http://vercre.io"
    expires_at: "[expires_at]"
expires_at: "[expires_at]"
