vercre-issuer/src/snapshots/token:authorization:state.snap
---
source: vercre-issuer/src/token.rs
assertion_line: 331
expression: state
---
expires_at: "[expires_at]"
current_step:
  token:
    access_token: "[access_token]"
    c_nonce: "[c_nonce]"
    c_nonce_expires_at: "[c_nonce_expires_at]"
    subject_id: normal_user
    authorized:
      - type: openid_credential
        credential_configuration_id: EmployeeID_JWT
        credential_identifiers:
          - PHLEmployeeID
