vercre-issuer/src/snapshots/token:authorization_details:state.snap
---
source: vercre-issuer/src/token.rs
assertion_line: 416
expression: state
---
expires_at: "[expires_at]"
subject_id: normal_user
current_step:
  token:
    access_token: "[access_token]"
    c_nonce: "[c_nonce]"
    c_nonce_expires_at: "[c_nonce_expires_at]"
